@@ -18,7 +18,6 @@ import static dev.langchain4j.model.output.FinishReason.TOOL_EXECUTION;
 import static java.util.Collections.emptyList;
 import static java.util.Collections.emptyMap;
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 
 import dev.langchain4j.Internal;
 import dev.langchain4j.agent.tool.ToolExecutionRequest;
@@ -87,8 +86,8 @@ public class AnthropicMapper {
 
         for (ChatMessage message : messages) {
 
-            if (message instanceof ToolExecutionResultMessage) {
-                toolContents.add(toAnthropicToolResultContent((ToolExecutionResultMessage) message));
+            if (message instanceof ToolExecutionResultMessage toolExecutionResultMessage) {
+                toolContents.add(toAnthropicToolResultContent(toolExecutionResultMessage));
             } else if (message instanceof SystemMessage) {
                 // ignore, it is handled in the "toAnthropicSystemPrompt" method
             } else {
@@ -97,8 +96,8 @@ public class AnthropicMapper {
                     toolContents = new ArrayList<>();
                 }
 
-                if (message instanceof UserMessage) {
-                    List<AnthropicMessageContent> contents = toAnthropicMessageContents((UserMessage) message);
+                if (message instanceof UserMessage userMessage) {
+                    List<AnthropicMessageContent> contents = toAnthropicMessageContents(userMessage);
                     anthropicMessages.add(new AnthropicMessage(USER, contents));
                 } else if (message instanceof AiMessage aiMessage) {
                     List<AnthropicMessageContent> contents = toAnthropicMessageContents(aiMessage, sendThinking);
@@ -142,7 +141,7 @@ public class AnthropicMapper {
                         throw illegalArgument("Unknown content type: " + content);
                     }
                 })
-                .collect(toList());
+                .toList();
     }
 
     private static List<AnthropicMessageContent> toAnthropicMessageContents(AiMessage message, boolean sendThinking) {
@@ -190,9 +189,9 @@ public class AnthropicMapper {
     public static List<AnthropicTextContent> toAnthropicSystemPrompt(
             List<ChatMessage> messages, AnthropicCacheType cacheType) {
         List<SystemMessage> systemMessages = messages.stream()
-                .filter(message -> message instanceof SystemMessage)
-                .map(message -> (SystemMessage) message)
-                .collect(toList());
+                .filter(SystemMessage.class::isInstance)
+                .map(SystemMessage.class::cast)
+                .toList();
 
         SystemMessage lastSystemMessage =
                 systemMessages.isEmpty() ? null : systemMessages.get(systemMessages.size() - 1);
@@ -204,7 +203,7 @@ public class AnthropicMapper {
                     }
                     return new AnthropicTextContent(message.text());
                 })
-                .collect(toList());
+                .toList();
     }
 
     public static AiMessage toAiMessage(List<AnthropicContent> contents) {
@@ -219,30 +218,30 @@ public class AnthropicMapper {
             List<AnthropicContent> contents, boolean returnThinking, boolean returnServerToolResults) {
 
         String text = contents.stream()
-                .filter(content -> "text".equals(content.type))
-                .map(content -> content.text)
+                .filter(content -> "text".equals(content.type()))
+                .map(AnthropicContent::text)
                 .collect(joining("\n"));
 
         String thinking = null;
         Map<String, Object> attributes = new HashMap<>();
         if (returnThinking) {
             thinking = contents.stream()
-                    .filter(content -> "thinking".equals(content.type))
-                    .map(content -> content.thinking)
+                    .filter(content -> "thinking".equals(content.type()))
+                    .map(AnthropicContent::thinking)
                     .collect(joining("\n"));
 
             String signature = contents.stream()
-                    .filter(content -> "thinking".equals(content.type))
-                    .map(content -> content.signature)
+                    .filter(content -> "thinking".equals(content.type()))
+                    .map(AnthropicContent::signature)
                     .collect(joining("\n"));
             if (isNotNullOrEmpty(signature)) {
                 attributes.put(THINKING_SIGNATURE_KEY, signature);
             }
 
             List<String> redactedThinkings = contents.stream()
-                    .filter(content -> "redacted_thinking".equals(content.type))
-                    .map(content -> content.data)
-                    .collect(toList());
+                    .filter(content -> REDACTED_THINKING_KEY.equals(content.type()))
+                    .map(AnthropicContent::data)
+                    .toList();
             if (!redactedThinkings.isEmpty()) {
                 attributes.put(REDACTED_THINKING_KEY, redactedThinkings);
             }
@@ -250,26 +249,26 @@ public class AnthropicMapper {
 
         if (returnServerToolResults) {
             List<AnthropicServerToolResult> serverToolResults = contents.stream()
-                    .filter(content -> isServerToolResultType(content.type))
+                    .filter(content -> isServerToolResultType(content.type()))
                     .map(content -> AnthropicServerToolResult.builder()
-                            .type(content.type)
-                            .toolUseId(content.toolUseId)
-                            .content(content.content)
+                            .type(content.type())
+                            .toolUseId(content.toolUseId())
+                            .content(content.content())
                             .build())
-                    .collect(toList());
+                    .toList();
             if (!serverToolResults.isEmpty()) {
                 attributes.put(SERVER_TOOL_RESULTS_KEY, serverToolResults);
             }
         }
 
         List<ToolExecutionRequest> toolExecutionRequests = contents.stream()
-                .filter(content -> "tool_use".equals(content.type))
+                .filter(content -> "tool_use".equals(content.type()))
                 .map(content -> ToolExecutionRequest.builder()
-                        .id(content.id)
-                        .name(content.name)
-                        .arguments(toJson(content.input))
+                        .id(content.id())
+                        .name(content.name())
+                        .arguments(toJson(content.input()))
                         .build())
-                .collect(toList());
+                .toList();
 
         return AiMessage.builder()
                 .text(isNullOrEmpty(text) ? null : text)
@@ -288,10 +287,10 @@ public class AnthropicMapper {
             return null;
         }
         return AnthropicTokenUsage.builder()
-                .inputTokenCount(anthropicUsage.inputTokens)
-                .outputTokenCount(anthropicUsage.outputTokens)
-                .cacheCreationInputTokens(anthropicUsage.cacheCreationInputTokens)
-                .cacheReadInputTokens(anthropicUsage.cacheReadInputTokens)
+                .inputTokenCount(anthropicUsage.inputTokens())
+                .outputTokenCount(anthropicUsage.outputTokens())
+                .cacheCreationInputTokens(anthropicUsage.cacheCreationInputTokens())
+                .cacheReadInputTokens(anthropicUsage.cacheReadInputTokens())
                 .build();
     }
 
@@ -349,7 +348,7 @@ public class AnthropicMapper {
                     return toAnthropicTool(
                             toolSpecification, AnthropicCacheType.NO_CACHE, toolMetadataKeysToSend, strictTools);
                 })
-                .collect(toList());
+                .toList();
     }
 
     public static AnthropicTool toAnthropicTool(
